--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>meus projetos do ano</title>
+    <link rel="stylesheet" href="sytle.css">
 </head>
 <body>
     <section class="conteudo-principal">
