--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus projetos para o ano</h2>
+        <h2 class="titulo-principal">Meus projetos para o ano <span> _</span></h2>
         <div class="botoes">
         <button class="botao">Criar cursos</button>
         <button class="botao">Criar projetos em JavaScript</button>
