--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
           <button class="botao">Atualizar meu currículo</button>
       </div>
       <div class="abas-textos">
-          <div class="aba conteudo">
+          <div class="aba-conteudo">
               <h3 class="aba-conteudo-titulo-principal">Estuda 4 cursos de Javascript</h3>
               <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR A ATIVIDADE</h4>
           </div>
-          <div class="aba conteudo">
+          <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal">Criar 3 projetos utiizando o JS</h3>
             <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR A ATIVIDADE</h4>
         </div>
-        <div class="aba conteudo">
+        <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal">Criar um portifolio com os 3 projetos</h3>
             <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR A ATIVIDADE</h4>
         </div>
-        <div class="aba conteudo">
+        <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com meus trabalhos</h3>
             <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR A ATIVIDADE</h4>
         </div>
