--- a/index.html
+++ b/index.html
@@ -10,29 +10,35 @@
 <body>
     <section class="conteudo-principal">
       <h2 class="titulo-principal">Meus objetivos do ano<span> _ </span></h2>
-      <div class="botoes">
-          <button class="botao">Criar cursos</button>
-          <button class="botao">Criar projetos em Javascript</button>
-          <button class="botao">Criar um portifólio</button>
-          <button class="botao">Atualizar meu currículo</button>
-      </div>
-      <div class="abas-textos">
-          <div class="aba-conteudo">
-              <h3 class="aba-conteudo-titulo-principal">Estuda 4 cursos de Javascript</h3>
-              <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR A ATIVIDADE</h4>
+     <div class="conteudo">
+        <div class="botoes">
+            <button class="botao">Criar cursos</button>
+            <button class="botao">Criar projetos em Javascript</button>
+            <button class="botao">Criar um portifólio</button>
+            <button class="botao">Atualizar meu currículo</button>
+        </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Estuda 4 cursos de Javascript</h3>
+                <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR O OBJETIVO</h4>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
+              <h3 class="aba-conteudo-titulo-principal">Criar 3 projetos utiizando o JS</h3>
+              <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR O OBJETIVO</h4>
+              <div class="contador"></div>
           </div>
           <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Criar 3 projetos utiizando o JS</h3>
-            <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR A ATIVIDADE</h4>
-        </div>
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Criar um portifolio com os 3 projetos</h3>
-            <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR A ATIVIDADE</h4>
-        </div>
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com meus trabalhos</h3>
-            <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR A ATIVIDADE</h4>
-        </div>
+              <h3 class="aba-conteudo-titulo-principal">Criar um portifolio com os 3 projetos</h3>
+              <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR O OBJETIVO</h4>
+              <div class="contador"></div>
+          </div>
+          <div class="aba-conteudo">
+              <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com meus trabalhos</h3>
+              <h4 class="aba-conteudo-titulo-secundario">TEMPO ATE CONCLUIR O OBJETIVO</h4>
+              <div class="contador"></div>
+          </div>
+     </div>
       </div>
     </section>
 
