--- a/index.html
+++ b/index.html
@@ -2,176 +2,114 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <title>Meus projetos para esse ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">   Meus objetivos do ano <span>_</span>     </h2>
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao">Criar cursos</button>
-                <button class="botao">Criar projetos em JavaScript</button>
+                <button class="botao">Criar cursor</button>
+                <button class="botao">Criar projeto em JavaScript</button>
                 <button class="botao">Criar um portifólio</button>
                 <button class="botao">Atualizar meu currículo</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos de JavaScript</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">TEMPO ATÉ CONCLUIR O OBJETIVO</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos de Java</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">TEMPO ATÉ CONCLUIR O OBJETIVO</h4> 
                     <div class="contador">
-                        <div class="dias">
-                            <div class="contador-digito-numero">
-                                15
-                            </div>
-                            <div class="contador-digito-texto">
-                                Dias
-                            </div>
+                        <div class="contador-digito" id="dia0">
+                            <div class="contador-digito-numero">52</div>
+                            <div class="contador-digito-texto">dias</div>
                         </div>
-                        <div class="horas">
-                            <div class="contador-digito-numero">
-                                10
-                            </div>
-                            <div class="contador-digito-texto">
-                                Horas
-                            </div>
+                        <div class="cotador-digito" id="hora0">
+                            <div class="contador-digito-numero">10</div>
+                            <div class="contador-digito-texto">horas</div>
                         </div>
-                        <div class="minutos">
-                            <div class="contador-digito-numero">
-                                20
-                            </div>
-                            <div class="contador-digito-texto">
-                                Minutos
-                            </div>
+                        <div class="cotador-digito" id="minutos0">
+                            <div class="contador-digito-numero">41</div>
+                            <div class="contador-digito-texto">minutos</div>
                         </div>
-                        <div class="segundos">
-                            <div class="contador-digito-numero">
-                                30
-                            </div>
-                            <div class="contador-digito-texto">
-                                Segundos
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-                <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar 3 projetos utilizando JavaScript</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">TEMPO ATÉ CONCLUIR O OBJETIVO</h4>
-                    <div class="contador">
-                        <div class="dias">
-                            <div class="contador-digito-numero">
-                                15
-                            </div>
-                            <div class="contador-digito-texto">
-                                Dias
-                            </div>
-                        </div>
-                        <div class="horas">
-                            <div class="contador-digito-numero">
-                                10
-                            </div>
-                            <div class="contador-digito-texto">
-                                Horas
-                            </div>
-                        </div>
-                        <div class="minutos">
-                            <div class="contador-digito-numero">
-                                20
-                            </div>
-                            <div class="contador-digito-texto">
-                                Minutos
-                            </div>
-                        </div>
-                        <div class="segundos">
-                            <div class="contador-digito-numero">
-                                30
-                            </div>
-                            <div class="contador-digito-texto">
-                                Segundos
-                            </div>
+                        <div class="contador-digito" id="segundos0">
+                            <div class="contador-digito-numero">30</div>
+                            <div class="contador-digito-texto">segundos</div>
                         </div>
                     </div>
                 </div>
-                <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portifólio com os meus três projetos</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">TEMPO ATÉ CONCLUIR O OBJETIVO</h4>
-                    <div class="contador">
-                        <div class="dias">
-                            <div class="contador-digito-numero">
-                                15
+                    <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">Criar 3 projetos utilizando Java</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">TEMPO ATÉ CONCLUIR O OBJETIVO</h4> 
+                        <div class="contador">
+                            <div class="contador-digito">
+                                <div class="contador-digito-numero">365</div>
+                                <div class="contador-digito-texto">dias</div>
                             </div>
-                            <div class="contador-digito-texto">
-                                Dias
+                            <div class="contador-digito">
+                                <div class="contador-digito-numero">17</div>
+                                <div class="contador-digito-texto">horas</div>
                             </div>
-                        </div>
-                        <div class="horas">
-                            <div class="contador-digito-numero">
-                                10
+                            <div class="contador-digito">
+                                <div class="contador-digito-numero">55</div>
+                                <div class="contador-digito-texto">minutos</div>
                             </div>
-                            <div class="contador-digito-texto">
-                                Horas
-                            </div>
-                        </div>
-                        <div class="minutos">
-                            <div class="contador-digito-numero">
-                                20
-                            </div>
-                            <div class="contador-digito-texto">
-                                Minutos
+                            <div class="contador-digito">
+                                <div class="contador-digito-numero">29</div>
+                                <div class="contador-digito-texto">segundos</div>
                             </div>
                         </div>
-                        <div class="segundos">
-                            <div class="contador-digito-numero">
-                                30
-                            </div>
-                            <div class="contador-digito-texto">
-                                Segundos
-                            </div>
-                        </div>
+
                     </div>
-                </div>
-                <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu currículo com meus novos certificados</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">TEMPO ATÉ CONCLUIR O OBJETIVO</h4>
-                    <div class="contador">
-                        <div class="contador-digito">
-                            <div class="contador-digito-numero">
-                                15
-                            </div>
-                            <div class="contador-digito-texto">
-                                Dias
-                            </div>
-                        </div>
-                        <div class="contador-digito">
-                            <div class="contador-digito-numero">
-                                10
-                            </div>
-                            <div class="contador-digito-texto">
-                                Horas
-                            </div>
-                        </div>
-                        <div class="contador-digito">
-                            <div class="contador-digito-numero">
-                                20
-                            </div>
-                            <div class="contador-digito-texto">
-                                Minutos
+                        <div class="aba-conteudo">
+                            <h3 class="aba-conteudo-titulo-principal">Criar um portifolio com os meus 3 curriculos</h3>
+                            <h4 class="aba-conteudo-titulo-secundario">TEMPO ATÉ CONCLUIR O OBJETIVO</h4> 
+                            <div class="contador">
+                                <div class="contador-digito">
+                                    <div class="contador-digito-numero">20</div>
+                                    <div class="contador-digito-texto">dias</div>
+                                </div>
+                                <div class="contador-digito">
+                                    <div class="contador-digito-numero">15</div>
+                                    <div class="contador-digito-texto">horas</div>
+                                </div>
+                                <div class="contador-digito">
+                                    <div class="contador-digito-numero">32</div>
+                                    <div class="contador-digito-texto">minutos</div>
+                                </div>
+                                <div class="contador-digito">
+                                    <div class="contador-digito-numero">45</div>
+                                    <div class="contador-digito-texto">segundos</div>
+                                </div>
                             </div>
                         </div>
-                        <div class="contador-digito">
-                            <div class="contador-digito-numero">
-                                30
+                            <div class="aba-conteudo">
+                                <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os meus certificados</h3>
+                                <h4 class="aba-conteudo-titulo-secundario">TEMPO ATÉ CONCLUIR O OBJETIVO</h4> 
+                                <div class="contador">
+                                    <div class="contador-digito">
+                                        <div class="contador-digito-numero">79</div>
+                                        <div class="contador-digito-texto">dias</div>
+                                    </div>
+                                    <div class="contador-digito">
+                                        <div class="contador-digito-numero">12</div>
+                                        <div class="contador-digito-texto">horas</div>
+                                    </div>
+                                    <div class="contador-digito">
+                                        <div class="contador-digito-numero">59</div>
+                                        <div class="contador-digito-texto">minutos</div>
+                                    </div>
+                                    <div class="contador-digito">
+                                        <div class="contador-digito-numero">27</div>
+                                        <div class="contador-digito-texto">segundos</div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="contador-digito-texto">
-                                Segundos
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            </div>
         </div>
     </section>
-
     <script src="main.js"></script>
 </body>
 </html>
